--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -5,114 +5,93 @@
 
 html,
 body,
-#app,
-.wrapper {
+.smartAttendance_applay {
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow: hidden;  
 }
-
 body {
     font-family: 'PingFang SC', "Helvetica Neue", Helvetica, "microsoft yahei", arial, STHeiTi, sans-serif;
 }
-
 a {
     text-decoration: none
 }
-
-
+.smartAttendance_applay_content{ width: 100%; height: 100vh;}
 .content-box {
     position: absolute;
-    left: 183px;
+    left: 200px;
     right: 0;
-    top: 55.5px;
+    top: 56px;
     bottom: 0;
     padding-bottom: 30px;
     -webkit-transition: left .3s ease-in-out;
     transition: left .3s ease-in-out;
     background: #f0f0f0;
 }
-
 .content {
-    width: auto;
+    width: 100%;
     height: 100%;
     padding: 10px;
     overflow-y: scroll;
     box-sizing: border-box;
+    background: #f2f3f4;
 }
-
 .content-collapse {
-    left: 65px;
+    left: 79px;
 }
-
 .container {
     padding: 30px;
     background: #fff;
     border: 1px solid #ddd;
     border-radius: 5px;
 }
-
 .crumbs {
     margin: 10px 0;
 }
-
 .el-table th {
-    background-color: #f5f7fa !important;
+    background-color: #f2f2f2 !important;
 }
-
+.el-table--enable-row-hover .el-table__body tr:hover>td{background-color: #f2f2f2 !important;}
 .pagination {
     margin: 20px 0;
     text-align: right;
 }
-
 .plugins-tips {
     padding: 20px 10px;
     margin-bottom: 20px;
 }
-
 .el-button+.el-tooltip {
     margin-left: 10px;
 }
-
 .el-table tr:hover {
-    background: #f6faff;
+    background: #f2f2f2 !important;
 }
-
 .mgb20 {
     margin-bottom: 20px;
 }
-
 .move-enter-active,
 .move-leave-active {
     transition: opacity .5s;
 }
-
 .move-enter,
 .move-leave {
     opacity: 0;
 }
-
 /*BaseForm*/
-
 .form-box {
     width: 600px;
 }
-
 .form-box .line {
     text-align: center;
 }
-
 .el-time-panel__content::after,
 .el-time-panel__content::before {
     margin-top: -7px;
 }
-
 .el-time-spinner__wrapper .el-scrollbar__wrap:not(.el-scrollbar__wrap--hidden-default) {
     padding-bottom: 0;
 }
-
 /*Upload*/
-
 .pure-button {
     width: 150px;
     height: 40px;
@@ -121,11 +100,9 @@ a {
     color: #fff;
     border-radius: 3px;
 }
-
 .g-core-image-corp-container .info-aside {
     height: 45px;
 }
-
 .el-upload--text {
     background-color: #fff;
     border: 1px dashed #d9d9d9;
