--- a/src/style/commonCss/page.less
+++ b/src/style/commonCss/page.less
@@ -700,7 +700,7 @@
     display: none;
   }
   .el-loading-spinner{
-    background: url(../../assets/img/loading.gif) no-repeat;
+    // background: url(../../assets/img/loading.gif) no-repeat;
     background-size: 200px 180px;
     width: 100%;
     height: 100%;
@@ -773,4 +773,84 @@
     >p{
         margin-right: 10px;
     }
+}
+
+// 操作页面样式
+.dataStatusPage{
+    .operating-page{
+        .basis-info{
+            .prompt {
+                font-size: 16px;
+                display: flex;
+                align-items: center;
+                &::before {
+                    margin-right: 7px;
+                    content: "";
+                    display: inline-block;
+                    width: 3px;
+                    height: 14px;
+                    background-color: #86cea8;
+                }
+            }
+            .operating-outer{
+                display: flex; justify-content: center;
+                .operating-form{
+                    display: flex;
+                    align-items: center;
+                    flex-wrap: wrap;
+                    padding-left: 90px;
+                    >li {
+                        display: flex;
+                        align-items: center;
+                        margin: 8px 0;
+                        height: 32px;
+                        .form-item-label{
+                            margin-right: 8px;
+                            width: 100px;
+                            display: flex;
+                            justify-content:flex-end ;
+                            >span {
+                                display: inline-block;
+                                white-space: nowrap;
+                                font-size: 14px;
+                                position: relative;
+                                color: #343435;
+                            }
+                            .necessary::after{
+                                content: '*';
+                                position: absolute;
+                                left: -10px;
+                                color: red;
+                            }
+                        }
+                        .elInput {
+                            width: 263px;
+                            display: flex;
+                            .el-date-editor--date{ width: 100% !important; }
+                            .el-input--small .el-input__inner{line-height: 35px; height: 35px;}
+                        }
+                        .show-text{
+                            width: 263px; font-size: 12px; color: #555555;
+                        }
+                    }
+                }
+           } 
+        }   
+        .operate-button{
+            display: flex; justify-content: center;margin-top: 22px;
+        }
+    }
+}
+
+.slide-left-enter,
+.slide-right-leave-active {
+    opacity: 0;
+    -webkit-transform: translateX(30px, 0);
+    transform: translate(30px, 0);
+}
+.slide-left-leave-active,
+.slide-right-enter {
+    opacity: 0;
+    -webkit-transform: translateX(-30px, 0);
+    transform: translateX(-30px, 0);
 }
